--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.1",
     "@types/bcrypt": "^6.0.0",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
