--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
+    "test:migration": "tsx scripts/test-migration.ts",
     "docker:build": "docker build -t anose-website .",
     "docker:run": "docker run -p 3000:3000 --env-file .env anose-website"
   },
@@ -31,13 +32,15 @@
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/xlsx": "^0.0.36",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "prisma": "^6.19.1",
