--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^6.19.1",
     "@types/bcrypt": "^6.0.0",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/blob": "^2.0.0",
     "@vercel/speed-insights": "^1.3.1",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
