--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,13 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"]
+  "regions": [
+    "iad1"
+  ],
+  "crons": [
+    {
+      "path": "/api/admin/automation/abandoned-cart",
+      "schedule": "0 * * * *"
+    }
+  ]
 }
-
