chore: schedule cron job for 8 PM IST (14:30 UTC)

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
   "framework": "nextjs",
   "regions": [
     "iad1"
+  ],
+  "crons": [
+    {
+      "path": "/api/admin/automation/abandoned-cart",
+      "schedule": "30 14 * * *"
+    }
   ]
 }
