--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.1",
     "@types/bcrypt": "^6.0.0",
