--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vercel/speed-insights": "^1.3.1",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-auth": "^4.24.13",
