--- a/admin-app/app.json
+++ b/admin-app/app.json
@@ -1,35 +1,41 @@
 {
-    "expo": {
-        "name": "Anose Admin",
-        "slug": "anose-admin",
-        "version": "1.0.0",
-        "orientation": "portrait",
-        "icon": "./assets/icon.png",
-        "scheme": "anose-admin",
-        "userInterfaceStyle": "dark",
-        "newArchEnabled": true,
-        "splash": {
-            "backgroundColor": "#0F0D1A",
-            "resizeMode": "contain"
-        },
-        "ios": {
-            "supportsTablet": true,
-            "bundleIdentifier": "com.anosebeauty.admin"
-        },
-        "android": {
-            "adaptiveIcon": {
-                "backgroundColor": "#0F0D1A"
-            },
-            "package": "com.anosebeauty.admin"
-        },
-        "web": {
-            "bundler": "metro",
-            "output": "single",
-            "favicon": "./assets/favicon.png"
-        },
-        "plugins": [
-            "expo-router",
-            "expo-secure-store"
-        ]
+  "expo": {
+    "name": "Anose Admin",
+    "slug": "anose-admin",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "scheme": "anose-admin",
+    "userInterfaceStyle": "dark",
+    "newArchEnabled": true,
+    "splash": {
+      "backgroundColor": "#0F0D1A",
+      "resizeMode": "contain"
+    },
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anosebeauty.admin"
+    },
+    "android": {
+      "adaptiveIcon": {
+        "backgroundColor": "#0F0D1A"
+      },
+      "package": "com.anosebeauty.admin"
+    },
+    "web": {
+      "bundler": "metro",
+      "output": "single",
+      "favicon": "./assets/favicon.png"
+    },
+    "plugins": [
+      "expo-router",
+      "expo-secure-store"
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "065109a0-9816-4926-b620-932fb73fa34a"
+      }
     }
+  }
 }
